--- a/photo.html
+++ b/photo.html
@@ -38,6 +38,7 @@
         <img src="IMG_9487.jpeg" alt="Beach scene 2">
         <img src="IMG_9488.jpeg" alt="Beach scene 3">
         <img src="IMG_9489.jpeg" alt="Beach scene 4">
+        <img src="istockphoto-614863462-612x612.jpg" alt="Scenic beach view">
     </div>
 </body>
 </html>
