--- a/photo.html
+++ b/photo.html
@@ -1,44 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Favourite Place</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: #f0f0f0;
-            margin: 0;
-            padding: 0;
-        }
-        h1 {
-            margin-top: 20px;
-        }
-        .gallery {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 10px;
-            padding: 20px;
-        }
-        img {
-            width: 100%;
-            max-width: 500px;
-            height: auto;
-            border-radius: 5px;
-            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-        }
+        body { text-align: center; font-family: Arial, sans-serif; }
+        img { max-width: 90%; height: auto; }
     </style>
 </head>
 <body>
     <h1>My Favourite Place</h1>
-    <div class="gallery">
-        <img src="IMG_9486.jpeg" alt="Beach scene 1">
-        <img src="IMG_9487.jpeg" alt="Beach scene 2">
-        <img src="IMG_9488.jpeg" alt="Beach scene 3">
-        <img src="IMG_9489.jpeg" alt="Beach scene 4">
-        <img src="istockphoto-614863462-612x612.jpg" alt="Scenic beach view">
-    </div>
+    <img src="istockphoto-614863462-612x612.jpg" alt="My Favourite Place">
 </body>
 </html>
+
